--- a/app/list.html
+++ b/app/list.html
@@ -15,6 +15,7 @@
 <a href="index4.html">страница4</a>
 <a href="index5.html">страница5</a>
 <a href="index6.html">страница6</a>
+<a href="profile.html">страница7</a>
 
 
 </body>
