--- a/app/transactions.html
+++ b/app/transactions.html
@@ -110,17 +110,180 @@
                         <span class="btn-add-icon"><img src="img/plus.svg" alt=""></span>
                         <span class="btn-add-text">Новый перевод</span>
                     </a>
+
+                    <div class="table-responsive">
+                        <table>
+                            <thead>
+                            <tr>
+                                <th>Статус перевода</th>
+                                <th>Дата и время</th>
+                                <th>Переведено</th>
+                                <th>Сумма перевода</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <div class="status-transaction">
+                                        <p>Входящий перевод </p>
+                                        <span class="icon-arrow"><img src="img/arrow-green.svg" alt=""></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p>00.00.0000</p>
+                                    <p>00:00</p>
+                                </td>
+                                <td><p>Номер/имя пользователя</p></td>
+                                <td><p>150 SMXP</p></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="status-transaction">
+                                        <p>Исходящий
+                                            перевод</p>
+                                        <span class="icon-arrow"><img src="img/arrow-orange.svg" alt=""></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p>00.00.0000</p>
+                                    <p>00:00</p>
+                                </td>
+                                <td><p>Номер/имя пользователя</p></td>
+                                <td><p>150 SMXP</p></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="tabs__content tabs__content-transactions">
+                    <a href="#modal__transactions" class="btn btn-add open_modal">
+                        <span class="btn-add-icon"><img src="img/plus.svg" alt=""></span>
+                        <span class="btn-add-text">Новый перевод</span>
+                    </a>
 
+                    <div class="table-responsive">
+                        <table>
+                            <thead>
+                            <tr>
+                                <th>Статус перевода</th>
+                                <th>Дата и время</th>
+                                <th>Переведено</th>
+                                <th>Сумма перевода</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <div class="status-transaction">
+                                        <p>Входящий перевод </p>
+                                        <span class="icon-arrow"><img src="img/arrow-green.svg" alt=""></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p>00.00.0000</p>
+                                    <p>00:00</p>
+                                </td>
+                                <td><p>Номер/имя пользователя</p></td>
+                                <td><p>150 SMXP</p></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="status-transaction">
+                                        <p>Входящий перевод</p>
+                                        <span class="icon-arrow"><img src="img/arrow-green.svg" alt=""></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p>00.00.0000</p>
+                                    <p>00:00</p>
+                                </td>
+                                <td><p>Номер/имя пользователя</p></td>
+                                <td><p>150 SMXP</p></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="tabs__content tabs__content-transactions">
+                    <a href="#modal__transactions" class="btn btn-add open_modal">
+                        <span class="btn-add-icon"><img src="img/plus.svg" alt=""></span>
+                        <span class="btn-add-text">Новый перевод</span>
+                    </a>
 
+                    <div class="table-responsive">
+                        <table>
+                            <thead>
+                            <tr>
+                                <th>Статус перевода</th>
+                                <th>Дата и время</th>
+                                <th>Переведено</th>
+                                <th>Сумма перевода</th>
+                            </tr>
+                            </thead>
+
+                            <tbody>
+                            <tr>
+                                <td>
+                                    <div class="status-transaction">
+                                        <p>Исходящий
+                                            перевод</p>
+                                        <span class="icon-arrow"><img src="img/arrow-orange.svg" alt=""></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p>00.00.0000</p>
+                                    <p>00:00</p>
+                                </td>
+                                <td><p>Номер/имя пользователя</p></td>
+                                <td><p>150 SMXP</p></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <div class="status-transaction">
+                                        <p>Исходящий
+                                            перевод</p>
+                                        <span class="icon-arrow"><img src="img/arrow-orange.svg" alt=""></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <p>00.00.0000</p>
+                                    <p>00:00</p>
+                                </td>
+                                <td><p>Номер/имя пользователя</p></td>
+                                <td><p>150 SMXP</p></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
 
                 <div class="tabs__content tabs__content-transactions">
+                    <a href="#modal__transactions" class="btn btn-add open_modal">
+                        <span class="btn-add-icon"><img src="img/plus.svg" alt=""></span>
+                        <span class="btn-add-text">Новый перевод</span>
+                    </a>
 
                 </div>
             </div>
