--- a/app/list.html
+++ b/app/list.html
@@ -28,6 +28,8 @@
 
         <a href="#modal__transfer1" class="btn btn-accent open_modal">успешный перевод</a>
         <a href="#modal__transfer2" class="btn btn-accent open_modal">Ошибка перевода</a>
+        <a href="#modal__transfer3" class="btn btn-accent open_modal">Награда получена</a>
+        <a href="#modal__transfer4" class="btn btn-accent open_modal">Награда получена</a>
 
     </div>
 </main>
@@ -50,6 +52,29 @@
         </div>
     </div>
 </div>
+
+<div class="modal__div" id="modal__transfer3">
+    <div class="modal__wrapper">
+        <div class="modal-img"><img src="img/check-modal.png" alt=""></div>
+        <div class="text-modal text-center">
+            <p>Награда успешно получено!</p>
+            <p>SMPX поступят на Ваш счет
+                в течение 72 часов.</p>
+        </div>
+    </div>
+</div>
+
+<div class="modal__div" id="modal__transfer4">
+    <div class="modal__wrapper">
+        <div class="modal-img"><img src="img/close-modal.png" alt=""></div>
+        <div class="text-modal text-center">
+            <p>Ошибка.</p>
+            <p>У Вас нет наград для зачисления
+                в кошелек.</p>
+        </div>
+    </div>
+</div>
+
 <div class="overlay"></div><!-- Пoдлoжкa -->
 
 <script src="js/jquery.min.js"></script>
