--- a/app/list.html
+++ b/app/list.html
@@ -29,7 +29,7 @@
         <a href="#modal__transfer1" class="btn btn-accent open_modal">успешный перевод</a>
         <a href="#modal__transfer2" class="btn btn-accent open_modal">Ошибка перевода</a>
         <a href="#modal__transfer3" class="btn btn-accent open_modal">Награда получена</a>
-        <a href="#modal__transfer4" class="btn btn-accent open_modal">Награда получена</a>
+        <a href="#modal__transfer4" class="btn btn-accent open_modal">Ошибка. Увас нет наград</a>
 
     </div>
 </main>
