--- a/app/list.html
+++ b/app/list.html
@@ -25,6 +25,7 @@
         <a href="index6.html" class="links-white">страница6</a>
         <a href="profile.html" class="links-white">страница7</a>
         <a href="transactions.html" class="links-white">страница8</a>
+        <a href="about.html" class="links-white">страница9</a>
 
         <a href="#modal__transfer1" class="btn btn-accent open_modal">успешный перевод</a>
         <a href="#modal__transfer2" class="btn btn-accent open_modal">Ошибка перевода</a>
