--- a/app/list.html
+++ b/app/list.html
@@ -26,6 +26,7 @@
         <a href="profile.html" class="links-white">страница7</a>
         <a href="transactions.html" class="links-white">страница8</a>
         <a href="about.html" class="links-white">страница9</a>
+        <a href="prosmining.html" class="links-white">страница10</a>
 
         <a href="#modal__transfer1" class="btn btn-accent open_modal">успешный перевод</a>
         <a href="#modal__transfer2" class="btn btn-accent open_modal">Ошибка перевода</a>
