--- a/app/list.html
+++ b/app/list.html
@@ -28,6 +28,7 @@
         <a href="about.html" class="links-white">страница9</a>
         <a href="prosmining.html" class="links-white">страница10</a>
         <a href="validators.html" class="links-white">страница11</a>
+        <a href="settings.html" class="links-white">страница12</a>
 
         <a href="#modal__transfer1" class="btn btn-accent open_modal">успешный перевод</a>
         <a href="#modal__transfer2" class="btn btn-accent open_modal">Ошибка перевода</a>
