--- a/app/validators.html
+++ b/app/validators.html
@@ -37,49 +37,49 @@
 
     <ul class="menu">
         <li>
-            <a href="#" class="active">
+            <a href="profile.html" class="active">
                 <span class="menu-icon"><img src="img/icon1.svg" alt=""></span>
                 <span class="menu-text">Личный кабинет</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="about.html">
                 <span class="menu-icon"><img src="img/icon2.png" alt=""></span>
                 <span class="menu-text">О SIMAX</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="transactions.html">
                 <span class="menu-icon"><img src="img/icon3.svg" alt=""></span>
                 <span class="menu-text">Транзакции</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="prosmining.html">
                 <span class="menu-icon"><img src="img/icon4.svg" alt=""></span>
                 <span class="menu-text">Посмайнинг</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="validators.html">
                 <span class="menu-icon"><img src="img/icon5.svg" alt=""></span>
                 <span class="menu-text">Валидаторы</span>
             </a>
         </li>
 
         <li>
-            <a href="#">
+            <a href="settings.html">
                 <span class="menu-icon"><img src="img/icon6.svg" alt=""></span>
                 <span class="menu-text">Настройки аккаунта</span>
             </a>
         </li>
     </ul>
 
-    <a href="#" class="links-edit">
+    <a href="index.html" class="links-edit">
         <span class="links-edit-text">Выход</span>
         <span class="links-edit-icon"><img src="img/edit.svg" alt=""></span>
     </a>
