--- a/app/list.html
+++ b/app/list.html
@@ -29,12 +29,44 @@
         <a href="prosmining.html" class="links-white">страница10</a>
         <a href="validators.html" class="links-white">страница11</a>
         <a href="settings.html" class="links-white">страница12</a>
-
+        <br>
+        <br>
+        <br>
+        <p>Light theme</p>
+        <br>
+        <br>
+        <a href="index-light.html" class="links-white">страница1 - light</a>
+        <a href="index2-light.html" class="links-white">страница2 - light</a>
+        <a href="index3-light.html" class="links-white">страница3 - light</a>
+        <a href="index4-light.html" class="links-white">страница4 - light</a>
+        <a href="index5-light.html" class="links-white">страница5 - light</a>
+        <a href="index6-light.html" class="links-white">страница6 - light</a>
+        <a href="profile-light.html" class="links-white">страница7 - light</a>
+        <a href="transactions-light.html" class="links-white">страница8 - light</a>
+        <a href="about-light.html" class="links-white">страница9 - light</a>
+        <a href="prosmining-light.html" class="links-white">страница10 - light</a>
+        <a href="validators-light.html" class="links-white">страница11 - light</a>
+        <a href="settings-light.html" class="links-white">страница12 - light</a>
+        <br>
+        <br>
         <a href="#modal__transfer1" class="btn btn-accent open_modal">успешный перевод</a>
         <a href="#modal__transfer2" class="btn btn-accent open_modal">Ошибка перевода</a>
         <a href="#modal__transfer3" class="btn btn-accent open_modal">Награда получена</a>
         <a href="#modal__transfer4" class="btn btn-accent open_modal">Ошибка. Увас нет наград</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <p>Light theme</p>
+        <br>
+        <br>
 
+        <a href="#modal__transfer1-light" class="btn btn-accent open_modal">успешный перевод light</a>
+        <a href="#modal__transfer2-light" class="btn btn-accent open_modal">Ошибка перевода light</a>
+        <a href="#modal__transfer3-light" class="btn btn-accent open_modal">Награда получена light</a>
+        <a href="#modal__transfer4-light" class="btn btn-accent open_modal">Ошибка. Увас нет наград light</a>
     </div>
 </main>
 
@@ -47,7 +79,26 @@
     </div>
 </div>
 
+<div class="modal__div modal__div-light" id="modal__transfer1-light">
+    <div class="modal__wrapper">
+        <div class="modal-img"><img src="img/check-modal.png" alt=""></div>
+        <div class="text-modal text-center">
+            <p>Перевод успешно выполнен!</p>
+        </div>
+    </div>
+</div>
+
 <div class="modal__div" id="modal__transfer2">
+    <div class="modal__wrapper">
+        <div class="modal-img"><img src="img/close-modal.png" alt=""></div>
+        <div class="text-modal text-center">
+            <p>Ошибка перевода.</p>
+            <p>Повторите операцию позже</p>
+        </div>
+    </div>
+</div>
+
+<div class="modal__div modal__div-light" id="modal__transfer2-light">
     <div class="modal__wrapper">
         <div class="modal-img"><img src="img/close-modal.png" alt=""></div>
         <div class="text-modal text-center">
@@ -68,7 +119,29 @@
     </div>
 </div>
 
+<div class="modal__div modal__div-light" id="modal__transfer3-light">
+    <div class="modal__wrapper">
+        <div class="modal-img"><img src="img/check-modal.png" alt=""></div>
+        <div class="text-modal text-center">
+            <p>Награда успешно получено!</p>
+            <p>SMPX поступят на Ваш счет
+                в течение 72 часов.</p>
+        </div>
+    </div>
+</div>
+
 <div class="modal__div" id="modal__transfer4">
+    <div class="modal__wrapper">
+        <div class="modal-img"><img src="img/close-modal.png" alt=""></div>
+        <div class="text-modal text-center">
+            <p>Ошибка.</p>
+            <p>У Вас нет наград для зачисления
+                в кошелек.</p>
+        </div>
+    </div>
+</div>
+
+<div class="modal__div modal__div-light" id="modal__transfer4-light">
     <div class="modal__wrapper">
         <div class="modal-img"><img src="img/close-modal.png" alt=""></div>
         <div class="text-modal text-center">
